--- a/v1.0 - 1/surrey.html
+++ b/v1.0 - 1/surrey.html
@@ -69,12 +69,13 @@
       <h2 class="infor">Contact Us</h2>
     <div class="box">
       <div id="map">
-         <img src="img/map.png" alt="map">
+         <img src="img/surreyoffice.jpg" alt="map">
         </div>
         <div class="infor" id="location">
          <h4>Surrey Information</h4>
-         <p>balabalalbala</p>
-         <p>balabalalbala</p>
+         <p>Address: 123 King George Blvd, Surrey, BC</p>
+         <p>Tel: 604-000-0000</p>
+         <p>Email: info@sunriserealty.ca</p>
         </div>
       </div>
 
