--- a/v1.0 - 1/townhouse.html
+++ b/v1.0 - 1/townhouse.html
@@ -102,12 +102,38 @@
 
     <div id="property-list">
       <div class="property-card">
-        <img id="card-img" src="img/listing.png" alt="property image">
+        <img id="card-img" src="img/listing1.jpg" alt="property image">
         <div id="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$999,999</td>
+          <td>$1256,900</td>
+          <th>Bedroom:</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Area:</th>
+          <td>Burnaby</td>
+          <th>Bathroom:</th>
+          <td>2</td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td>123 Telford Ave</td>
+          <th>Year:</th>
+          <td>2008</td>
+        </tr>
+      </table>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+      </div>
+      <div class="property-card">
+        <img id="card-img" src="img/listing2.jpeg" alt="property image">
+        <div id="card-infor">
+          <table class="menu">
+        <tr>
+          <th>Price:</th>
+          <td>$1286,600</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
@@ -121,118 +147,92 @@
           <th>Address:</th>
           <td>123 No. 3 Road</td>
           <th>Year:</th>
-          <td>2018</td>
+          <td>2009</td>
         </tr>
       </table>
         </div>
         <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing.png" alt="property image">
+        <img id="card-img" src="img/listing3.jpg" alt="property image">
         <div id="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$999,999</td>
+          <td>$1086,900</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
         <tr>
           <th>Area:</th>
-          <td>Richmond</td>
+          <td>Brunaby</td>
           <th>Bathroom:</th>
           <td>2</td>
         </tr>
         <tr>
           <th>Address:</th>
-          <td>123 No. 3 Road</td>
+          <td>123 Beresford Road</td>
           <th>Year:</th>
-          <td>2018</td>
+          <td>2004</td>
         </tr>
       </table>
         </div>
         <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing.png" alt="property image">
+        <img id="card-img" src="img/listing4.jpg" alt="property image">
         <div id="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$999,999</td>
+          <td>$1586,900</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
         <tr>
           <th>Area:</th>
-          <td>Richmond</td>
+          <td>Vancouver</td>
           <th>Bathroom:</th>
           <td>2</td>
         </tr>
         <tr>
           <th>Address:</th>
-          <td>123 No. 3 Road</td>
+          <td>123 51th Ave</td>
           <th>Year:</th>
-          <td>2018</td>
+          <td>2010</td>
         </tr>
       </table>
         </div>
         <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing.png" alt="property image">
+        <img id="card-img" src="img/listing5.jpeg" alt="property image">
         <div id="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$999,999</td>
+          <td>$1626,900</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
         <tr>
           <th>Area:</th>
-          <td>Richmond</td>
+          <td>Vancouver</td>
           <th>Bathroom:</th>
           <td>2</td>
         </tr>
         <tr>
           <th>Address:</th>
-          <td>123 No. 3 Road</td>
+          <td>123 33rd St</td>
           <th>Year:</th>
-          <td>2018</td>
+          <td>2008</td>
         </tr>
       </table>
         </div>
         <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing.png" alt="property image">
-        <div id="card-infor">
-          <table class="menu">
-        <tr>
-          <th>Price:</th>
-          <td>$999,999</td>
-          <th>Bedroom:</th>
-          <td>3</td>
-        </tr>
-        <tr>
-          <th>Area:</th>
-          <td>Richmond</td>
-          <th>Bathroom:</th>
-          <td>2</td>
-        </tr>
-        <tr>
-          <th>Address:</th>
-          <td>123 No. 3 Road</td>
-          <th>Year:</th>
-          <td>2018</td>
-        </tr>
-      </table>
-        </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
-      </div>
-      <div class="property-card">
-        <img id="card-img" src="img/listing.png" alt="property image">
+        <img id="card-img" src="img/listing1.jpg" alt="property image">
         <div id="card-infor">
           <table class="menu">
         <tr>
