change detail and homepage

--- a/v1.0 - 1/detail.html
+++ b/v1.0 - 1/detail.html
@@ -87,13 +87,13 @@
           <th>Price:</th>
           <td>$1256,900</td>
           <th>Bedroom:</th>
-          <td>3</td>
+          <td>7</td>
         </tr>
         <tr>
           <th>Area:</th>
           <td>Burnaby</td>
           <th>Bathroom:</th>
-          <td>2</td>
+          <td>5</td>
         </tr>
         <tr>
           <th>Address:</th>
@@ -102,22 +102,22 @@
           <td>2008</td>
         </tr>
         <tr>
-          <th>Price:</th>
-          <td>$999,999</td>
-          <th>Bedroom:</th>
+          <th>House Area:</th>
+          <td>1,861Sqft</td>
+          <th>Type::</th>
+          <td>House</td>
+        </tr>
+        <tr>
+          <th>Storages:</th>
           <td>3</td>
+          <th>City: </th>
+          <td>Burnaby</td>
         </tr>
         <tr>
-          <th>Area:</th>
-          <td>Richmond</td>
-          <th>Bathroom:</th>
-          <td>2</td>
-        </tr>
-        <tr>
-          <th>Address:</th>
-          <td>123 No. 3 Road</td>
-          <th>Year:</th>
-          <td>2018</td>
+          <th>Tax:</th>
+          <td>$4654</td>
+          <th>Year of built:</th>
+          <td>10 yrs</td>
         </tr>
       </table>
     </div>
