--- a/v1.0 - 1/home.html
+++ b/v1.0 - 1/home.html
@@ -66,7 +66,7 @@
     </section>
     <div id="banner">
       <img src="img/banner.jpg" alt="banner">
-      <a id="link" href="search.html">Find Realty Now</a>
+      <a id="link" href="search.html">Find Realty Now!</a>
     </section>
     </div>
 
