change reponsive detail and hamburger menu button

--- a/v1.0 - 1/surrey.html
+++ b/v1.0 - 1/surrey.html
@@ -13,7 +13,7 @@
 
 
   <body>
-    <section id="header">
+    <header id="header">
       <div id="headercont">
       <div id="header1">
           <a href="home.html">
@@ -63,7 +63,7 @@
 
       <div class="nav"><a href="contactUs.html">Contact Us</a></div>
     </div>
-    </section>
+    </header>
     <section>
 
       <h2 class="infor">Contact Us</h2>
@@ -83,9 +83,9 @@
 
     </section>
 
-        <section id="footer">
+           <footer id="footer">
       <div id="footercont">
-        <table class="menu">
+        <table class="menu1">
         <tr>
           <th>NAVIGATE</th>
           <th>QUICK LINKS</th>
@@ -120,11 +120,70 @@
 
         </tr>
       </table>
+
+      <table class="menu2">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+
+        </tr>
+         <tr>
+
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+
+        </tr>
+         <tr>
+
+          <td><a href="search.html">Find Realty</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+
+        </tr>
+         <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td></td>
+
+
+        </tr>
+        <tr>
+
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
+
+
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
+
+
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
+
+        </tr>
+      </table>
       </div>
       <div>
         <p id="cr">Copyright Sunrise Realty 2018</p>
       </div>
-    </section>
+    </footer>
 
 
 
