--- a/v1.0 - 1/home.html
+++ b/v1.0 - 1/home.html
@@ -13,7 +13,7 @@
 
 
   <body>
-  	<section id="header">
+  	<header id="header">
       <div id="headercont">
       <div id="header1">
           <a href="home.html">
@@ -63,12 +63,12 @@
 
       <div class="nav"><a href="contactUs.html">Contact Us</a></div>
     </div>
-    </section>
+    </header>
     <div id="banner">
       <img src="img/banner.jpg" alt="banner">
       <a id="link" href="search.html">Find Realty Now!</a>
-    </section>
     </div>
+
 
     <section>
     <div id="topsales">
@@ -107,7 +107,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing1.jpg" alt="listing">
-              <figcaption>Burnaby| $1256,900</figcaption>
+              <figcaption>Burnaby| $1,256,900</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -117,7 +117,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing2.jpeg" alt="listing">
-              <figcaption>Richmond| $1286,600</figcaption>
+              <figcaption>Richmond| $1,286,600</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -127,7 +127,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing3.jpg" alt="listing">
-              <figcaption>Burnaby| $1086,900</figcaption>
+              <figcaption>Burnaby| $1,086,900</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -137,7 +137,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing4.jpg" alt="listing">
-              <figcaption>Vancouver| $1586,900</figcaption>
+              <figcaption>Vancouver| $1,586,900</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -147,7 +147,7 @@
           <div class="listing">
             <figure>
               <img src="img/listing5.jpeg" alt="listing">
-              <figcaption>Vancouver| $1626,900</figcaption>
+              <figcaption>Vancouver| $1,626,900</figcaption>
             </figure>
             <div class="more">
               <a href="detail.html">Detail</a>
@@ -170,9 +170,9 @@
       	<a href="search.html">more property</a>
       </div>
     </section>
-    <section id="footer">
+    <footer id="footer">
      	<div id="footercont">
-    		<table class="menu">
+    		<table class="menu1">
 			  <tr>
 			    <th>NAVIGATE</th>
 			    <th>QUICK LINKS</th>
@@ -207,11 +207,70 @@
 
 			  </tr>
 			</table>
+
+      <table class="menu2">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+
+        </tr>
+         <tr>
+
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+
+        </tr>
+         <tr>
+
+          <td><a href="search.html">Find Realty</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+
+        </tr>
+         <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td></td>
+
+
+        </tr>
+        <tr>
+
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
+
+
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
+
+
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
+
+        </tr>
+      </table>
     	</div>
     	<div>
     		<p id="cr">Copyright Sunrise Realty 2018</p>
     	</div>
-    </section>
+    </footer>
 
   </body>
 </html>
