--- a/v1.0 - 1/townhouse.html
+++ b/v1.0 - 1/townhouse.html
@@ -13,7 +13,7 @@
 
 
   <body>
-    <section id="header">
+    <header id="header">
       <div id="headercont">
       <div id="header1">
           <a href="home.html">
@@ -63,7 +63,7 @@
 
       <div class="nav"><a href="contactUs.html">Contact Us</a></div>
     </div>
-    </section>
+    </header>
     <section>
 
       <h2 class="infor">Search</h2>
@@ -107,7 +107,7 @@
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$1256,900</td>
+          <td>$1,256,900</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
@@ -133,7 +133,7 @@
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$1286,600</td>
+          <td>$1,286,600</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
@@ -159,7 +159,7 @@
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$1086,900</td>
+          <td>$,1086,900</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
@@ -185,7 +185,7 @@
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$1586,900</td>
+          <td>$1,586,900</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
@@ -211,7 +211,7 @@
           <table class="menu">
         <tr>
           <th>Price:</th>
-          <td>$1626,900</td>
+          <td>$1,626,900</td>
           <th>Bedroom:</th>
           <td>3</td>
         </tr>
@@ -275,9 +275,9 @@
       </section>
 
 
-    <section id="footer">
+    <footer id="footer">
       <div id="footercont">
-        <table class="menu">
+        <table class="menu1">
         <tr>
           <th>NAVIGATE</th>
           <th>QUICK LINKS</th>
@@ -312,10 +312,69 @@
 
         </tr>
       </table>
+
+      <table class="menu2">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+
+        </tr>
+         <tr>
+
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+
+        </tr>
+         <tr>
+
+          <td><a href="search.html">Find Realty</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+
+        </tr>
+         <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td></td>
+
+
+        </tr>
+        <tr>
+
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
+
+
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
+
+
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
+
+        </tr>
+      </table>
       </div>
       <div>
         <p id="cr">Copyright Sunrise Realty 2018</p>
       </div>
-    </section>
+    </footer>
   </body>
 </html>
