add link on footer,change seperate css for styleguide and citation page

--- a/v1.0 - 1/styleguide.html
+++ b/v1.0 - 1/styleguide.html
@@ -5,8 +5,9 @@
     <title>P02 - Style Guide Template</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="normalize.css" rel="stylesheet" >
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/guide.css" rel="stylesheet">
     <link href="css/flexbox.css" rel="stylesheet">
     <link href="css/font.css" rel="stylesheet">
 
@@ -38,9 +39,8 @@
 
       <p>Other pages:</p>
       <ul>
-        <li><a href="">User-flows</a>
-        <li><a href="styleguide.html">Style Guide</a>
-        <li><a href="citations.html">Citations</a>
+        <li><a href="index.html">Style Guide</a>
+        <li><a href="citation.html">Citations</a>
       </ul>
 
     </nav>
