--- a/v1.0 - 1/apartment.html
+++ b/v1.0 - 1/apartment.html
@@ -272,46 +272,45 @@
       <a href="#">Next</a>
     </div>
 
-      </section>
+</section>
 
+<footer id="footer">
+     	<div id="footercont">
+    		<table class="menu1">
+			  <tr>
+			    <th>NAVIGATE</th>
+			    <th>QUICK LINKS</th>
+			    <th>STORE INFO</th>
+			    <th>CONNECT</th>
+			  </tr>
+			  <tr>
+			    <td><a href="aboutCompany.html">About Company</a></td>
+			   	<td><a href="house.html">Find House</a></td>
+			   	<td><a href="rmd.html">Richmond</a></td>
+			   	<td><a>Facebook</a></td>
+			  </tr>
+			   <tr>
 
-           <footer id="footer">
-      <div id="footercont">
-        <table class="menu1">
-        <tr>
-          <th>NAVIGATE</th>
-          <th>QUICK LINKS</th>
-          <th>STORE INFO</th>
-          <th>CONNECT</th>
-        </tr>
-        <tr>
-          <td><a href="aboutCompany.html">About Company</a></td>
-          <td><a href="house.html">Find House</a></td>
-          <td><a href="rmd.html">Richmond</a></td>
-          <td><a>Facebook</a></td>
-        </tr>
-         <tr>
+			    <td><a href="salesTeam.html">Sales Team</a></td>
+			    <td><a href="apartment.html">Find Apartment</a></td>
+			    <td><a href="bby.html">Burnaby</a></td>
+			    <td><a>Twitter</a></td>
+			  </tr>
+			   <tr>
 
-          <td><a href="salesTeam.html">Sales Team</a></td>
-          <td><a href="apartment.html">Find Apartment</a></td>
-          <td><a href="bby.html">Burnaby</a></td>
-          <td><a>Twitter</a></td>
-        </tr>
-         <tr>
+			    <td><a href="search.html">Find Realty</a></td>
+			    <td><a href="townhouse.html">Find Townhouse</a></td>
+			    <td><a href="van.html">Vancouver</a></td>
+			    <td><a>Pinterest</a></td>
+			  </tr>
+			   <tr>
+			    <td><a href="contactUs.html">Contact Us</a></td>
+			    <td></td>
+			    <td><a href="surrey.html">Surrey</a></td>
+			    <td><a>Google+</a></td>
 
-          <td><a href="search.html">Find Realty</a></td>
-          <td><a href="townhouse.html">Find Townhouse</a></td>
-          <td><a href="van.html">Vancouver</a></td>
-          <td><a>Pinterest</a></td>
-        </tr>
-         <tr>
-          <td><a href="contactUs.html">Contact Us</a></td>
-          <td></td>
-          <td><a href="surrey.html">Surrey</a></td>
-          <td><a>Google+</a></td>
-
-        </tr>
-      </table>
+			  </tr>
+			</table>
 
       <table class="menu2">
         <tr>
@@ -371,12 +370,12 @@
 
         </tr>
       </table>
-      </div>
-      <div>
-        <p id="cr">Copyright Sunrise Realty 2018</p>
-      </div>
+    	</div>
+    	<div>
+    		<p id="cr">Copyright Sunrise Realty 2018</p>
+        <p id="cr"><a href="index.html"> Style Guide </a>   /    <a href="citation.html"> Citation </a>   /   <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
+    	</div>
     </footer>
-
 
   </body>
 </html>
