--- a/v1.0 - 1/citation.html
+++ b/v1.0 - 1/citation.html
@@ -2,11 +2,12 @@
 <html lang="en-US">
 
   <head>
-    <title>P02 - Style Guide Template</title>
+    <title>P02 - Citations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="normalize.css" rel="stylesheet" >
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/guide.css" rel="stylesheet">
     <link href="css/flexbox.css" rel="stylesheet">
     <link href="css/font.css" rel="stylesheet">
 
@@ -14,11 +15,11 @@
 
   <body>
 
-    <h1>P02 - Citations</h1>
+    <h1 class="center">P02 - Citations</h1>
 
 
 
-    <nav>
+    <nav class="center">
 
       <p>
         On this page:
@@ -37,9 +38,8 @@
 
       <p>Other pages:</p>
       <ul>
-        <li><a href="User-flows.html">User-flows</a>
-        <li><a href="styleguide.html">Style Guide</a>
-        <li><a href="citations.html">Citations</a>
+        <li><a href="index.html">Style Guide</a>
+        <li><a href="citation.html">Citations</a>
       </ul>
 
     </nav>
