change a spelling fault

--- a/v1.0 - 1/styleguide.html
+++ b/v1.0 - 1/styleguide.html
@@ -39,7 +39,7 @@
 
       <p>Other pages:</p>
       <ul>
-        <li><a href="index.html">Style Guide</a>
+        <li><a href="styleguide.html">Style Guide</a>
         <li><a href="citation.html">Citations</a>
       </ul>
 
