--- a/v1.0 - 1/citation.html
+++ b/v1.0 - 1/citation.html
@@ -38,7 +38,7 @@
 
       <p>Other pages:</p>
       <ul>
-        <li><a href="index.html">Style Guide</a>
+        <li><a href="styleguide.html">Style Guide</a>
         <li><a href="citation.html">Citations</a>
       </ul>
 
