--- a/v1.0 - 1/search.html
+++ b/v1.0 - 1/search.html
@@ -391,7 +391,7 @@
           	</div>
           	<div>
           		<p id="cr">Copyright Sunrise Realty 2018</p>
-              <p id="cr"><a href="index.html"> Style Guide </a>   /    <a href="citation.html"> Citation </a>   /   <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
+              <p id="cr"><a href="styleguide.html"> Style Guide </a>   /    <a href="citation.html"> Citation </a>   /   <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
           	</div>
           </footer>
 
