validate and change detail button on mobile size

--- a/p02-final/apartment.html
+++ b/p02-final/apartment.html
@@ -26,7 +26,7 @@
       </div>
         <div id="header3">
           <form>
-              <input type="text" area="Area" class="search-box">
+              <input type="text" class="search-box">
               <input type="submit" value=" Search " class="button">
             </form>
         </div>
@@ -71,25 +71,25 @@
         <div>
         <h4> Select Type :</h4>
       </div>
-    <div id="selecter">
+    <div class="selecter">
 
-      <input type="radio" name="area-radio1" id="switch0" /><label for="switch0" id="label1">House</label>
-      <input type="radio" name="area-radio1" id="switch1" checked /><label for="switch1" id="label1">Apartment</label>
-      <input type="radio" name="area-radio1" id="switch2" /><label for="switch2" id="label1">Townhouse</label>
+      <input type="radio" name="area-radio1" id="switch0" /><label for="switch0" id="label11">House</label>
+      <input type="radio" name="area-radio1" id="switch1" checked /><label for="switch1" id="label12">Apartment</label>
+      <input type="radio" name="area-radio1" id="switch2" /><label for="switch2" id="label13">Townhouse</label>
     </div>
     <div>
         <h4> Select Area :</h4>
       </div>
-    <div id="selecter">
+    <div class="selecter">
 
-      <input type="radio" name="area-radio2" id="switch11" /><label for="switch11" id="label2">Richmond</label>
-      <input type="radio" name="area-radio2" id="switch21" /><label for="switch21" id="label2">Burnaby</label>
-      <input type="radio" name="area-radio2" id="switch31" /><label for="switch31" id="label2">Vancouver</label>
-      <input type="radio" name="area-radio2" id="switch41" /><label for="switch41" id="label2">Surrey</label>
+      <input type="radio" name="area-radio2" id="switch11" /><label for="switch11" id="label21">Richmond</label>
+      <input type="radio" name="area-radio2" id="switch21" /><label for="switch21" id="label22">Burnaby</label>
+      <input type="radio" name="area-radio2" id="switch31" /><label for="switch31" id="label23">Vancouver</label>
+      <input type="radio" name="area-radio2" id="switch41" /><label for="switch41" id="label24">Surrey</label>
     </div>
   </div>
 
-    <div id="pagenum">
+    <div class="pagenum">
       <a href="#">Pre</a>
       <a href="#">1</a>
       <a href="#">2</a>
@@ -102,8 +102,8 @@
 
    <div id="property-list">
       <div class="property-card">
-        <img id="card-img" src="img/listing1.jpg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing1.jpg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -125,11 +125,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html">Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing2.jpeg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing2.jpeg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -151,11 +151,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html">Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing3.jpg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing3.jpg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -177,11 +177,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html">Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing4.jpg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing4.jpg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -203,11 +203,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html" >Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing5.jpeg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing5.jpeg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -229,11 +229,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html" >Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing1.jpg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing1.jpg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -255,13 +255,13 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html">Detail</a>
       </div>
 
 
     </div>
 
-    <div id="pagenum">
+    <div class="pagenum">
       <a href="#">Pre</a>
       <a href="#">1</a>
       <a href="#">2</a>
@@ -272,45 +272,46 @@
       <a href="#">Next</a>
     </div>
 
-</section>
+      </section>
 
-<footer id="footer">
-     	<div id="footercont">
-    		<table class="menu1">
-			  <tr>
-			    <th>NAVIGATE</th>
-			    <th>QUICK LINKS</th>
-			    <th>STORE INFO</th>
-			    <th>CONNECT</th>
-			  </tr>
-			  <tr>
-			    <td><a href="aboutCompany.html">About Company</a></td>
-			   	<td><a href="house.html">Find House</a></td>
-			   	<td><a href="rmd.html">Richmond</a></td>
-			   	<td><a>Facebook</a></td>
-			  </tr>
-			   <tr>
 
-			    <td><a href="salesTeam.html">Sales Team</a></td>
-			    <td><a href="apartment.html">Find Apartment</a></td>
-			    <td><a href="bby.html">Burnaby</a></td>
-			    <td><a>Twitter</a></td>
-			  </tr>
-			   <tr>
+           <footer id="footer">
+      <div id="footercont">
+        <table class="menu1">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
 
-			    <td><a href="search.html">Find Realty</a></td>
-			    <td><a href="townhouse.html">Find Townhouse</a></td>
-			    <td><a href="van.html">Vancouver</a></td>
-			    <td><a>Pinterest</a></td>
-			  </tr>
-			   <tr>
-			    <td><a href="contactUs.html">Contact Us</a></td>
-			    <td></td>
-			    <td><a href="surrey.html">Surrey</a></td>
-			    <td><a>Google+</a></td>
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
 
-			  </tr>
-			</table>
+          <td><a href="search.html">Find Realty</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td></td>
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
+
+        </tr>
+      </table>
 
       <table class="menu2">
         <tr>
@@ -370,12 +371,13 @@
 
         </tr>
       </table>
-    	</div>
-    	<div>
-    		<p id="cr">Copyright Sunrise Realty 2018</p>
-        <p id="cr"><a href="styleguide.html"> Style Guide </a>   /    <a href="citation.html"> Citation </a>   /   <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
-    	</div>
+      </div>
+        <div id="cr">
+        <p>Copyright Sunrise Realty 2018</p>
+        <p><a href="styleguide.html"> Style Guide </a>  /  <a href="citation.html"> Citation </a>  /  <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
+      </div>
     </footer>
+
 
   </body>
 </html>
