--- a/p02-final/bby.html
+++ b/p02-final/bby.html
@@ -26,7 +26,7 @@
       </div>
         <div id="header3">
           <form>
-              <input type="text" area="Area" class="search-box">
+              <input type="text" class="search-box">
               <input type="submit" value=" Search " class="button">
             </form>
         </div>
@@ -80,46 +80,45 @@
         </div>
       </div>
 
-      </div>
 
     </section>
     <footer id="footer">
-     	<div id="footercont">
-    		<table class="menu1">
-			  <tr>
-			    <th>NAVIGATE</th>
-			    <th>QUICK LINKS</th>
-			    <th>STORE INFO</th>
-			    <th>CONNECT</th>
-			  </tr>
-			  <tr>
-			    <td><a href="aboutCompany.html">About Company</a></td>
-			   	<td><a href="house.html">Find House</a></td>
-			   	<td><a href="rmd.html">Richmond</a></td>
-			   	<td><a>Facebook</a></td>
-			  </tr>
-			   <tr>
+      <div id="footercont">
+        <table class="menu1">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
 
-			    <td><a href="salesTeam.html">Sales Team</a></td>
-			    <td><a href="apartment.html">Find Apartment</a></td>
-			    <td><a href="bby.html">Burnaby</a></td>
-			    <td><a>Twitter</a></td>
-			  </tr>
-			   <tr>
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
 
-			    <td><a href="search.html">Find Realty</a></td>
-			    <td><a href="townhouse.html">Find Townhouse</a></td>
-			    <td><a href="van.html">Vancouver</a></td>
-			    <td><a>Pinterest</a></td>
-			  </tr>
-			   <tr>
-			    <td><a href="contactUs.html">Contact Us</a></td>
-			    <td></td>
-			    <td><a href="surrey.html">Surrey</a></td>
-			    <td><a>Google+</a></td>
+          <td><a href="search.html">Find Realty</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td></td>
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
 
-			  </tr>
-			</table>
+        </tr>
+      </table>
 
       <table class="menu2">
         <tr>
@@ -179,12 +178,17 @@
 
         </tr>
       </table>
-    	</div>
-    	<div>
-    		<p id="cr">Copyright Sunrise Realty 2018</p>
-        <p id="cr"><a href="styleguide.html"> Style Guide </a>   /    <a href="citation.html"> Citation </a>   /   <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
-    	</div>
+      </div>
+      <div id="cr">
+        <p>Copyright Sunrise Realty 2018</p>
+        <p><a href="styleguide.html"> Style Guide </a>  /  <a href="citation.html"> Citation </a>  /  <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
+      </div>
     </footer>
+
+
+
+
+
 
   </body>
 </html>
