--- a/p02-final/home.html
+++ b/p02-final/home.html
@@ -26,7 +26,7 @@
       </div>
         <div id="header3">
           <form>
-              <input type="text" area="Area" class="search-box">
+              <input type="text" class="search-box">
               <input type="submit" value=" Search " class="button">
             </form>
         </div>
@@ -267,9 +267,9 @@
         </tr>
       </table>
     	</div>
-    	<div>
-    		<p id="cr">Copyright Sunrise Realty 2018</p>
-        <p id="cr"><a href="styleguide.html"> Style Guide </a>   /    <a href="citation.html"> Citation </a>   /   <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
+    	<div id="cr">
+    		<p>Copyright Sunrise Realty 2018</p>
+        <p><a href="styleguide.html"> Style Guide </a>  /  <a href="citation.html"> Citation </a>  /  <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
     	</div>
     </footer>
 
