--- a/p02-final/detail.html
+++ b/p02-final/detail.html
@@ -26,7 +26,7 @@
       </div>
         <div id="header3">
           <form>
-              <input type="text" area="Area" class="search-box">
+              <input type="text" class="search-box">
               <input type="submit" value=" Search " class="button">
             </form>
         </div>
@@ -67,13 +67,13 @@
     <section>
     <div id="image-show">
       <div id="imagecont">
-        <img id="large" src="img/listing1.jpg">
+        <img id="large" src="img/listing1.jpg" alt="large">
         <div id="small">
-          <img src="img/detail1.jpeg">
-          <img src="img/detail2.jpeg">
-          <img src="img/detail3.jpeg">
-          <img src="img/detail4.jpeg">
-          <img src="img/detail5.jpeg">
+          <img src="img/detail1.jpeg" alt="small">
+          <img src="img/detail2.jpeg" alt="small">
+          <img src="img/detail3.jpeg" alt="small">
+          <img src="img/detail4.jpeg" alt="small">
+          <img src="img/detail5.jpeg" alt="small">
         </div>
     </div>
   </div>
@@ -137,116 +137,119 @@
   <div id="buy">
     <h3>
           Feel Interested ?
-        </h3>
+      </h3>
   <div class="more">
           <a href="contactUs.html" class="button-nav" >Contact Us Now!</a>
         </div>
+      </div>
     </section>
-  </div>
 
 
-  <footer id="footer">
-       	<div id="footercont">
-      		<table class="menu1">
-  			  <tr>
-  			    <th>NAVIGATE</th>
-  			    <th>QUICK LINKS</th>
-  			    <th>STORE INFO</th>
-  			    <th>CONNECT</th>
-  			  </tr>
-  			  <tr>
-  			    <td><a href="aboutCompany.html">About Company</a></td>
-  			   	<td><a href="house.html">Find House</a></td>
-  			   	<td><a href="rmd.html">Richmond</a></td>
-  			   	<td><a>Facebook</a></td>
-  			  </tr>
-  			   <tr>
 
-  			    <td><a href="salesTeam.html">Sales Team</a></td>
-  			    <td><a href="apartment.html">Find Apartment</a></td>
-  			    <td><a href="bby.html">Burnaby</a></td>
-  			    <td><a>Twitter</a></td>
-  			  </tr>
-  			   <tr>
+       <footer id="footer">
+      <div id="footercont">
+        <table class="menu1">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
 
-  			    <td><a href="search.html">Find Realty</a></td>
-  			    <td><a href="townhouse.html">Find Townhouse</a></td>
-  			    <td><a href="van.html">Vancouver</a></td>
-  			    <td><a>Pinterest</a></td>
-  			  </tr>
-  			   <tr>
-  			    <td><a href="contactUs.html">Contact Us</a></td>
-  			    <td></td>
-  			    <td><a href="surrey.html">Surrey</a></td>
-  			    <td><a>Google+</a></td>
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
 
-  			  </tr>
-  			</table>
+          <td><a href="search.html">Find Realty</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td></td>
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
 
-        <table class="menu2">
-          <tr>
-            <th>NAVIGATE</th>
-            <th>QUICK LINKS</th>
+        </tr>
+      </table>
 
-          </tr>
-          <tr>
-            <td><a href="aboutCompany.html">About Company</a></td>
-            <td><a href="house.html">Find House</a></td>
+      <table class="menu2">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
 
-          </tr>
-           <tr>
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
 
-            <td><a href="salesTeam.html">Sales Team</a></td>
-            <td><a href="apartment.html">Find Apartment</a></td>
+        </tr>
+         <tr>
 
-          </tr>
-           <tr>
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
 
-            <td><a href="search.html">Find Realty</a></td>
-            <td><a href="townhouse.html">Find Townhouse</a></td>
+        </tr>
+         <tr>
 
-          </tr>
-           <tr>
-            <td><a href="contactUs.html">Contact Us</a></td>
-            <td></td>
+          <td><a href="search.html">Find Realty</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
 
-
-          </tr>
-          <tr>
-
-            <th>STORE INFO</th>
-            <th>CONNECT</th>
-          </tr>
-          <tr>
-
-            <td><a href="rmd.html">Richmond</a></td>
-            <td><a>Facebook</a></td>
-          </tr>
-           <tr>
+        </tr>
+         <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td></td>
 
 
-            <td><a href="bby.html">Burnaby</a></td>
-            <td><a>Twitter</a></td>
-          </tr>
-           <tr>
+        </tr>
+        <tr>
+
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
 
 
-            <td><a href="van.html">Vancouver</a></td>
-            <td><a>Pinterest</a></td>
-          </tr>
-           <tr>
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
 
-            <td><a href="surrey.html">Surrey</a></td>
-            <td><a>Google+</a></td>
 
-          </tr>
-        </table>
-      	</div>
-      	<div>
-      		<p id="cr">Copyright Sunrise Realty 2018</p>
-          <p id="cr"><a href="styleguide.html"> Style Guide </a>   /    <a href="citation.html"> Citation </a>   /   <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
-      	</div>
-      </footer>
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
 
-    </body>
-  </html>
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
+
+        </tr>
+      </table>
+      </div>
+        <div id="cr">
+        <p>Copyright Sunrise Realty 2018</p>
+        <p><a href="styleguide.html"> Style Guide </a>  /  <a href="citation.html"> Citation </a>  /  <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
+      </div>
+    </footer>
+
+
+
+  </body>
+</html>
