--- a/p02-final/search.html
+++ b/p02-final/search.html
@@ -26,7 +26,7 @@
       </div>
         <div id="header3">
           <form>
-              <input type="text" area="Area" class="search-box">
+              <input type="text" class="search-box">
               <input type="submit" value=" Search " class="button">
             </form>
         </div>
@@ -104,9 +104,9 @@
 	<input type="submit" value=" Search " class="button">
       </div>
       </section>
-      <section>
-
-      <div id="pagenum">
+      <section >
+<h2>Search Results</h2>
+      <div class="pagenum">
       <a href="#">Pre</a>
       <a href="#">1</a>
       <a href="#">2</a>
@@ -119,8 +119,8 @@
 
    <div id="property-list">
       <div class="property-card">
-        <img id="card-img" src="img/listing1.jpg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing1.jpg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -142,11 +142,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html">Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing2.jpeg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing2.jpeg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -168,11 +168,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html">Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing3.jpg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing3.jpg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -194,11 +194,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html">Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing4.jpg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing4.jpg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -220,11 +220,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html" >Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing5.jpeg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing5.jpeg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -246,11 +246,11 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html" >Detail</a>
       </div>
       <div class="property-card">
-        <img id="card-img" src="img/listing1.jpg" alt="property image">
-        <div id="card-infor">
+        <img class="card-img" src="img/listing1.jpg" alt="property image">
+        <div class="card-infor">
           <table class="menu">
         <tr>
           <th>Price:</th>
@@ -272,13 +272,13 @@
         </tr>
       </table>
         </div>
-        <a id="card-button" href="detail.html" class="button-nav" >Detail</a>
+        <a class="card-button" href="detail.html">Detail</a>
       </div>
 
 
     </div>
 
-    <div id="pagenum">
+    <div class="pagenum">
       <a href="#">Pre</a>
       <a href="#">1</a>
       <a href="#">2</a>
@@ -292,108 +292,110 @@
       </section>
 
 
-      <footer id="footer">
-           	<div id="footercont">
-          		<table class="menu1">
-      			  <tr>
-      			    <th>NAVIGATE</th>
-      			    <th>QUICK LINKS</th>
-      			    <th>STORE INFO</th>
-      			    <th>CONNECT</th>
-      			  </tr>
-      			  <tr>
-      			    <td><a href="aboutCompany.html">About Company</a></td>
-      			   	<td><a href="house.html">Find House</a></td>
-      			   	<td><a href="rmd.html">Richmond</a></td>
-      			   	<td><a>Facebook</a></td>
-      			  </tr>
-      			   <tr>
+    <footer id="footer">
+      <div id="footercont">
+        <table class="menu1">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
 
-      			    <td><a href="salesTeam.html">Sales Team</a></td>
-      			    <td><a href="apartment.html">Find Apartment</a></td>
-      			    <td><a href="bby.html">Burnaby</a></td>
-      			    <td><a>Twitter</a></td>
-      			  </tr>
-      			   <tr>
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
 
-      			    <td><a href="search.html">Find Realty</a></td>
-      			    <td><a href="townhouse.html">Find Townhouse</a></td>
-      			    <td><a href="van.html">Vancouver</a></td>
-      			    <td><a>Pinterest</a></td>
-      			  </tr>
-      			   <tr>
-      			    <td><a href="contactUs.html">Contact Us</a></td>
-      			    <td></td>
-      			    <td><a href="surrey.html">Surrey</a></td>
-      			    <td><a>Google+</a></td>
+          <td><a href="search.html">Find Realty</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td></td>
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
 
-      			  </tr>
-      			</table>
+        </tr>
+      </table>
 
-            <table class="menu2">
-              <tr>
-                <th>NAVIGATE</th>
-                <th>QUICK LINKS</th>
+      <table class="menu2">
+        <tr>
+          <th>NAVIGATE</th>
+          <th>QUICK LINKS</th>
 
-              </tr>
-              <tr>
-                <td><a href="aboutCompany.html">About Company</a></td>
-                <td><a href="house.html">Find House</a></td>
+        </tr>
+        <tr>
+          <td><a href="aboutCompany.html">About Company</a></td>
+          <td><a href="house.html">Find House</a></td>
 
-              </tr>
-               <tr>
+        </tr>
+         <tr>
 
-                <td><a href="salesTeam.html">Sales Team</a></td>
-                <td><a href="apartment.html">Find Apartment</a></td>
+          <td><a href="salesTeam.html">Sales Team</a></td>
+          <td><a href="apartment.html">Find Apartment</a></td>
 
-              </tr>
-               <tr>
+        </tr>
+         <tr>
 
-                <td><a href="search.html">Find Realty</a></td>
-                <td><a href="townhouse.html">Find Townhouse</a></td>
+          <td><a href="search.html">Find Realty</a></td>
+          <td><a href="townhouse.html">Find Townhouse</a></td>
 
-              </tr>
-               <tr>
-                <td><a href="contactUs.html">Contact Us</a></td>
-                <td></td>
-
-
-              </tr>
-              <tr>
-
-                <th>STORE INFO</th>
-                <th>CONNECT</th>
-              </tr>
-              <tr>
-
-                <td><a href="rmd.html">Richmond</a></td>
-                <td><a>Facebook</a></td>
-              </tr>
-               <tr>
+        </tr>
+         <tr>
+          <td><a href="contactUs.html">Contact Us</a></td>
+          <td></td>
 
 
-                <td><a href="bby.html">Burnaby</a></td>
-                <td><a>Twitter</a></td>
-              </tr>
-               <tr>
+        </tr>
+        <tr>
+
+          <th>STORE INFO</th>
+          <th>CONNECT</th>
+        </tr>
+        <tr>
+
+          <td><a href="rmd.html">Richmond</a></td>
+          <td><a>Facebook</a></td>
+        </tr>
+         <tr>
 
 
-                <td><a href="van.html">Vancouver</a></td>
-                <td><a>Pinterest</a></td>
-              </tr>
-               <tr>
+          <td><a href="bby.html">Burnaby</a></td>
+          <td><a>Twitter</a></td>
+        </tr>
+         <tr>
 
-                <td><a href="surrey.html">Surrey</a></td>
-                <td><a>Google+</a></td>
 
-              </tr>
-            </table>
-          	</div>
-          	<div>
-          		<p id="cr">Copyright Sunrise Realty 2018</p>
-              <p id="cr"><a href="styleguide.html"> Style Guide </a>   /    <a href="citation.html"> Citation </a>   /   <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
-          	</div>
-          </footer>
+          <td><a href="van.html">Vancouver</a></td>
+          <td><a>Pinterest</a></td>
+        </tr>
+         <tr>
 
-        </body>
-      </html>
+          <td><a href="surrey.html">Surrey</a></td>
+          <td><a>Google+</a></td>
+
+        </tr>
+      </table>
+      </div>
+      <div id="cr">
+        <p>Copyright Sunrise Realty 2018</p>
+        <p><a href="styleguide.html"> Style Guide </a>  /  <a href="citation.html"> Citation </a>  /  <a href="https://github.com/Lorettawei/p02-v1"> Git </a> </p>
+      </div>
+    </footer>
+
+
+
+  </body>
+</html>
